# google-search-console-mcp-chatgpt

./: README.md  requirements.txt
mcp-gsc/: gsc_server.py  pyproject.toml
mcp_gsc/: gsc_server.py  main.py
